--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-novaclient>=2.17.0
 netaddr>=0.7.6
 python-keystoneclient>=0.10.0
 pecan>=0.5.0
+redis>=2.10.5
 Routes>=1.12.3,!=2.0
 SQLAlchemy>=0.8.4,<=0.8.99,>=0.9.7,<=0.9.99
 stevedore>=0.14
