--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ netaddr!=0.7.16,>=0.7.13 # BSD
 python-keystoneclient>=3.8.0 # Apache-2.0
 pecan!=1.0.2,!=1.0.3,!=1.0.4,!=1.2,>=1.0.0 # BSD
 sqlalchemy-migrate>=0.9.6 # Apache-2.0
+redis>=2.10.5
 Routes!=2.0,!=2.1,!=2.3.0,>=1.12.3;python_version=='2.7' # MIT
 Routes!=2.0,!=2.3.0,>=1.12.3;python_version!='2.7' # MIT
 SQLAlchemy<1.1.0,>=1.0.10 # MIT
