--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ netaddr>=0.7.12,!=0.7.16
 python-keystoneclient>=1.6.0
 pecan>=1.0.0
 sqlalchemy-migrate>=0.9.6
+redis>=2.10.5
 Routes>=1.12.3,!=2.0
 SQLAlchemy>=0.9.9,<1.1.0
 stevedore>=1.5.0  # Apache-2.0
