--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ console_scripts =
 blazar.resource.plugins =
     dummy.vm.plugin=blazar.plugins.dummy_vm_plugin:DummyVMPlugin
     physical.host.plugin=blazar.plugins.oshosts.host_plugin:PhysicalHostPlugin
-    physical.network.plugin=blazar.plugins.networks.network_plugin:PhysicalNetworkPlugin
+    network.plugin=blazar.plugins.networks.network_plugin:NetworkPlugin
     virtual.instance.plugin=blazar.plugins.instances.instance_plugin:VirtualInstancePlugin
 
 blazar.api.v2.controllers.extensions =
